log
Fri Apr 17 06:48:39 PM UTC 2026: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  1|7
total_score: 0/60
bec9ab1
Fri Apr 17 06:49:42 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|7
total_score: 0/60
f30b188
Fri Apr 17 06:50:55 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:21: error: ‘size’ undeclared (first use in this function)
   83 |         map->size = size--;
      |                     ^~~~
hashmap.c:83:21: note: each undeclared identifier is reported only once for each function it appears in
8368d8f
Fri Apr 17 06:51:13 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:19: error: operation on ‘map->size’ may be undefined [-Werror=sequence-point]
   83 |         map->size = map->size--;
      |         ~~~~~~~~~~^~~~~~~~~~~~~
cc1: all warnings being treated as errors
a787197
Fri Apr 17 06:51:51 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|7
total_score: 0/60
c598c05
